[package]
name = "wifilite"
description = "Simple high-level Wi-Fi management and connectivity utilities"
keywords = ["wifi"]
authors = ["Ultraegern"]
repository = "https://github.com/ultraegern/wifilite"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full", "rt", "macros"] }
thiserror = "2.0"
wifi-ctrl = "0.2"
