[package]
name = "wifilite"
description = "Simple high-level Wi-Fi management and connectivity utilities"
categories = [
    "api-bindings",
    "os::linux-apis",
    "asynchronous"
]
keywords = [
    "wifi",
    "wpa-supplicant",
    "wpa_supplicant",
]
authors = ["Ultraegern"]
repository = "https://github.com/ultraegern/wifilite"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full", "rt", "macros"] }
thiserror = "2.0"
wifi-ctrl = "0.2"
