[package]
name = "wifilite"
description = "Simple high-level Wi-Fi management and connectivity utilities"
categories = [
    "api-bindings",
    "os::linux-apis",
    "asynchronous"
]
keywords = [
    "wifi",
    "wpa-supplicant",
    "wpa_supplicant",
]
authors = ["Ultraegern"]
repository = "https://github.com/ultraegern/wifilite"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[features]
default = ["wpa_supplicant"]
wpa_supplicant = ["dep:wifi-ctrl"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full", "rt", "macros"] }
thiserror = "2.0"
wifi-ctrl = { version = "0.3.0", optional = true }
